refractor changes to test in browser

--- a/prokerjs/examples/index.html
+++ b/prokerjs/examples/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Using ES6 modules</title>
-<script src="main.js" type="module"></script>
+<script src="../dist/bundle.js"></script>
 </head>
 <body>
 </body>
