--- a/prokerjs/examples/index.html
+++ b/prokerjs/examples/index.html
@@ -2,8 +2,22 @@
 <html lang="en">
 <head>
 <title>Using ES6 modules</title>
+<style>
+  body {
+    background-color: #121212;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 20px;
+  }
+
+  h1 {
+    color: #ffa500;
+  }
+</style>
 <script src="../dist/bundle.js"></script>
 </head>
 <body>
+  <h1>ProkerJS</h1>
 </body>
 </html>
