card comparison and deal specific card

--- a/prokerjs/examples/index.html
+++ b/prokerjs/examples/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Using ES6 modules</title>
+<title>ProkerJS</title>
+<link rel="icon" href="assets/favicon.png" type="image/png">
 <style>
   body {
     background-color: #121212;
